rubocop/examples/good/style_EmptyLinesAroundClassBody.rb
# TODO: Checks if empty lines around the bodies
#   of classes match the configuration.

# good
class Test
  def something
   ...
  end
end
