rubocop/examples/bad/style_EmptyLinesAroundClassBody.rb
# TODO: Checks if empty lines around the bodies
#   of classes match the configuration.

# bad
class Test

   def something
     ...
   end

end
